### Change Log - 2.1.1.15 (06/XX/2017)
- general bug fixes
- Improved processing
- LoadLibrary should ignore unauthorized paths
- DownloadContentClick should no longer force close for unavailable content

### Change Log - 2.1.1.14 (05/25/2017)
- Improved loading & processing
- Faster subsequent start ups

### Change Log - 2.1.1.13 (05/08/2017)
- Selected graphic packs save between sessions
- Added a small input box for manual update versions
- Database automatically re-builds every 3 days at startup
- Version Check - notified at startup upon version mismatch
- Bug fixes

### Change Log - 2.1.1.12 (04/22/2017)
- Added exceptions
- No Graphic Pack option
- Bug fixes

### Change Log - 2.1.1.11 (04/05/2017)
- Fixes a null reference that causes crashing

### Change Log - 2.1.1.10 (04/05/2017)
- Full screen option for cemu
- Current title version displayed
- Implemented DeleteTitleButton()
- Implemented Store Encrypted Content
- Implemented a ticket generator (1 less remote call)
- Backend code improvements
- Disable Dynamic Theme function
- Various UI Changes
- Implemented UninstallButton()

### Change Log - 2.1.1.8 (03/27/2017)
- Fixed an installer error

### Change Log - 2.1.1.2 (03/26/2017)
- Added dynamic context menu items 
- Implemented LaunchCemuButton()
- Implemented AddUpdateButton()
- Implemented RemoveUpdateButton()
- Implemented AddDLCButton()
- Implemented RemoveDLCButton()